--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,18 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:id="@+id/activity"
+            android:name=".TrainActivity"
+            android:label="@string/app_name"></activity>
+        <activity
+            android:id="@+id/activity"
+            android:name=".GameActivity"
+            android:label="@string/app_name"></activity>
+        <activity
+            android:id="@+id/activity"
+            android:name=".StatusActivity"
+            android:label="@string/app_name"></activity>
     </application>
 
 </manifest>
