--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,13 @@ android {
     compileSdkVersion 29
     buildToolsVersion "29.0.3"
 
+    lintOptions {
+        checkReleaseBuilds false
+        // Or, if you prefer, you can continue to check for errors in release builds,
+        // but continue the build even when errors are found:
+        abortOnError false
+    }
+
     defaultConfig {
         applicationId "com.example.suijaku"
         minSdkVersion 16
@@ -15,6 +22,9 @@ android {
     }
 
     buildTypes {
+        debug{
+            debuggable false
+        }
 
         release {
             minifyEnabled false
