--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,7 +21,7 @@ android {
 
     buildTypes {
         debug{
-            debuggable false
+            debuggable true
         }
         release {
             minifyEnabled false
