--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,6 +39,12 @@
             android:name=".SelectActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"></activity>
+        android:screenOrientation="portrait">
+    <activity
+        android:id="@+id/activity"
+        android:name=".StatusActivity2"
+        android:label="@string/app_name"
+        android:screenOrientation="portrait"></activity>
     </application>
 
 </manifest>
