--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,10 +38,14 @@
             android:name=".SelectActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"></activity>
-        android:screenOrientation="portrait">
         <activity
             android:id="@+id/activity"
             android:name=".StatusActivity2"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"></activity>
+        <activity
+            android:id="@+id/activity"
+            android:name=".StatusActivity3"
             android:label="@string/app_name"
             android:screenOrientation="portrait"></activity>
         <activity
